substrate/frame/support/test/tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.stderr
error: The number of pallets exceeds the maximum number of tuple elements. To increase this limit, enable the tuples-96 feature of [frame_support].
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:67:2
   |
67 |     pub struct Runtime
   |     ^^^

error: recursion limit reached while expanding `frame_support::__private::tt_return!`
   --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:22:1
    |
22  | /  #[frame_support::pallet]
23  | |  mod pallet {
24  | |      #[pallet::config]
25  | |      pub trait Config: frame_system::Config {}
...   |
66  | |/ construct_runtime! {
67  | ||     pub struct Runtime
68  | ||     {
69  | ||         System: frame_system::{Pallet, Call, Storage, Config<T>, Event<T>},
...   ||
180 | ||     }
181 | || }
    | ||_^
    |  |_|
    |    in this macro invocation
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`$CRATE`)
    = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
